--- a/Roomie/Roomie/Base.lproj/LaunchScreen.storyboard
+++ b/Roomie/Roomie/Base.lproj/LaunchScreen.storyboard
@@ -29,7 +29,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.40443294759999998" green="0.83409646599999998" blue="0.88384175409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="lDR-6h-bra" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Tfs-os-OZa"/>
                             <constraint firstItem="lDR-6h-bra" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="lsR-zy-212"/>
