--- a/Roomie/Roomie/tabBarController.storyboard
+++ b/Roomie/Roomie/tabBarController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="z67-bn-kro">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="z67-bn-kro">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,6 +23,7 @@
                         <segue destination="yab-nF-hn2" kind="relationship" relationship="viewControllers" id="GS1-yp-A8b"/>
                         <segue destination="kZe-LE-cb7" kind="relationship" relationship="viewControllers" id="3gb-86-1FV"/>
                         <segue destination="kKp-gD-JPV" kind="relationship" relationship="viewControllers" id="W8K-fc-PWf"/>
+                        <segue destination="SmN-tG-TqJ" kind="relationship" relationship="viewControllers" id="TUl-BR-qms"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Idl-4g-YxW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -68,6 +69,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fto-Vg-dMr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="303" y="446"/>
+        </scene>
+        <!--GroupLaunchScreen-->
+        <scene sceneID="nph-GG-jBy">
+            <objects>
+                <viewControllerPlaceholder storyboardName="GroupLaunchScreen" id="SmN-tG-TqJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="HO3-F8-yyL"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aOR-rh-w29" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="300" y="-13"/>
         </scene>
     </scenes>
 </document>
