Create screen to connect to the tab bars to have access to other items

--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -187,6 +187,7 @@
                                 </state>
                                 <connections>
                                     <action selector="signUpButtonTapped:" destination="LzG-Cr-yRb" eventType="touchUpInside" id="hAw-IG-Bdx"/>
+                                    <segue destination="CNN-nj-WjQ" kind="show" id="3xh-SB-Pgg"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XR2-Fw-CUh">
@@ -237,7 +238,20 @@
                     <view key="view" contentMode="scaleToFill" id="76i-3g-HLT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8zE-cR-gvN">
+                                <rect key="frame" x="164" y="318" width="46" height="30"/>
+                                <state key="normal" title="Create"/>
+                                <connections>
+                                    <segue destination="SLm-TJ-fxV" kind="show" id="SUw-wJ-JNO"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8zE-cR-gvN" firstAttribute="centerY" secondItem="76i-3g-HLT" secondAttribute="centerY" id="5aY-88-dEX"/>
+                            <constraint firstItem="8zE-cR-gvN" firstAttribute="centerX" secondItem="76i-3g-HLT" secondAttribute="centerX" id="XdU-B6-Xqc"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E5b-Yb-eaR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -427,4 +441,7 @@
         <image name="phone512" width="512" height="512"/>
         <image name="profileicon9" width="512" height="512"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="dei-rC-aI3"/>
+    </inferredMetricsTieBreakers>
 </document>
