--- a/Roomie/Roomie/tabBarController.storyboard
+++ b/Roomie/Roomie/tabBarController.storyboard
@@ -19,9 +19,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
+                        <segue destination="kZe-LE-cb7" kind="relationship" relationship="viewControllers" id="3gb-86-1FV"/>
                         <segue destination="yIt-mT-SCZ" kind="relationship" relationship="viewControllers" id="tX5-bj-8Lw"/>
                         <segue destination="yab-nF-hn2" kind="relationship" relationship="viewControllers" id="GS1-yp-A8b"/>
-                        <segue destination="kZe-LE-cb7" kind="relationship" relationship="viewControllers" id="3gb-86-1FV"/>
                         <segue destination="kKp-gD-JPV" kind="relationship" relationship="viewControllers" id="W8K-fc-PWf"/>
                         <segue destination="SmN-tG-TqJ" kind="relationship" relationship="viewControllers" id="TUl-BR-qms"/>
                     </connections>
@@ -58,7 +58,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vE2-Rt-U1J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="311" y="327"/>
+            <point key="canvasLocation" x="309" y="-148"/>
         </scene>
         <!--Settings-->
         <scene sceneID="X5q-f1-Shd">
@@ -73,7 +73,7 @@
         <!--GroupLaunchScreen-->
         <scene sceneID="nph-GG-jBy">
             <objects>
-                <viewControllerPlaceholder storyboardName="GroupLaunchScreen" id="SmN-tG-TqJ" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="Home" storyboardName="GroupLaunchScreen" id="SmN-tG-TqJ" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="HO3-F8-yyL"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aOR-rh-w29" userLabel="First Responder" sceneMemberID="firstResponder"/>
