--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -117,7 +117,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <segue destination="5Qn-nf-YjP" kind="show" identifier="toGroupScreen" id="moU-P4-R9J"/>
+                        <segue destination="VZ2-3Y-J11" kind="show" identifier="toGroupScreen" id="moU-P4-R9J"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -137,13 +137,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FirstName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nGE-sP-Ari">
-                                <rect key="frame" x="79" y="20" width="216" height="21"/>
+                                <rect key="frame" x="79" y="64" width="216" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5kt-a8-Wav">
-                                <rect key="frame" x="0.0" y="49" width="375" height="509"/>
+                                <rect key="frame" x="0.0" y="93" width="375" height="465"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="E6s-Wi-4qv" detailTextLabel="pn4-pM-DKX" style="IBUITableViewCellStyleValue1" id="2fe-rq-yvL">
@@ -222,12 +222,13 @@
                             <constraint firstAttribute="trailing" secondItem="XR2-Fw-CUh" secondAttribute="trailing" constant="88" id="zm8-0e-LpV"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="TT1-XT-Zb0"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VgG-eG-3WF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1940" y="436"/>
+            <point key="canvasLocation" x="2279.1999999999998" y="435.83208395802103"/>
         </scene>
-        <!--View Controller-->
+        <!--Create a group-->
         <scene sceneID="sly-Ko-9lf">
             <objects>
                 <viewController id="CNN-nj-WjQ" sceneMemberID="viewController">
@@ -239,24 +240,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8zE-cR-gvN">
-                                <rect key="frame" x="164" y="318" width="46" height="30"/>
-                                <state key="normal" title="Create"/>
-                                <connections>
-                                    <segue destination="SLm-TJ-fxV" kind="show" id="SUw-wJ-JNO"/>
-                                </connections>
-                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BigGroupIcon" translatesAutoresizingMaskIntoConstraints="NO" id="ch7-Eu-YIy">
+                                <rect key="frame" x="110" y="72" width="155" height="155"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="155" id="A18-H8-358"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter group name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kte-Ww-4Li">
+                                <rect key="frame" x="119" y="247" width="137" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Vzg-qw-Pm0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GfY-0c-oQ8">
+                                <rect key="frame" x="51" y="330" width="234" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8zE-cR-gvN" firstAttribute="centerY" secondItem="76i-3g-HLT" secondAttribute="centerY" id="5aY-88-dEX"/>
-                            <constraint firstItem="8zE-cR-gvN" firstAttribute="centerX" secondItem="76i-3g-HLT" secondAttribute="centerX" id="XdU-B6-Xqc"/>
+                            <constraint firstAttribute="trailing" secondItem="Kte-Ww-4Li" secondAttribute="trailing" constant="119" id="D62-RT-e80"/>
+                            <constraint firstItem="Kte-Ww-4Li" firstAttribute="leading" secondItem="76i-3g-HLT" secondAttribute="leading" constant="119" id="O5M-ra-fjF"/>
+                            <constraint firstAttribute="trailing" secondItem="ch7-Eu-YIy" secondAttribute="trailing" constant="110" id="dcQ-e4-KIR"/>
+                            <constraint firstItem="ch7-Eu-YIy" firstAttribute="leading" secondItem="76i-3g-HLT" secondAttribute="leading" constant="110" id="fAJ-T3-tOX"/>
+                            <constraint firstItem="ch7-Eu-YIy" firstAttribute="top" secondItem="OTF-vd-X92" secondAttribute="bottom" constant="8" id="ivz-4P-goC"/>
+                            <constraint firstItem="Kte-Ww-4Li" firstAttribute="top" secondItem="ch7-Eu-YIy" secondAttribute="bottom" constant="20" id="lFt-XO-i0E"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Create a group" id="xOB-c6-GJs">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Mqu-kO-6OB"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E5b-Yb-eaR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2772" y="908"/>
+            <point key="canvasLocation" x="3111.1999999999998" y="907.1964017991005"/>
         </scene>
         <!--tabBarController-->
         <scene sceneID="bDO-Pk-Jek">
@@ -264,7 +287,7 @@
                 <viewControllerPlaceholder storyboardName="tabBarController" id="SLm-TJ-fxV" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WuQ-Ng-XS9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2646" y="157"/>
+            <point key="canvasLocation" x="2984" y="156.52173913043478"/>
         </scene>
         <!--Sign Up Table View Controller-->
         <scene sceneID="bGB-bs-Lvn">
@@ -434,14 +457,30 @@
             </objects>
             <point key="canvasLocation" x="820" y="463"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BHU-f1-lXw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VZ2-3Y-J11" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Yfz-Si-pok">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5Qn-nf-YjP" kind="relationship" relationship="rootViewController" id="Xoj-a7-vP7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fdy-Xb-u7V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1543" y="1000"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="BigGroupIcon" width="512" height="512"/>
         <image name="Emailicon" width="512" height="512"/>
         <image name="newroomies" width="585" height="717"/>
         <image name="phone512" width="512" height="512"/>
         <image name="profileicon9" width="512" height="512"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="dei-rC-aI3"/>
-    </inferredMetricsTieBreakers>
 </document>
