--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -231,7 +231,7 @@
         <!--Create a group-->
         <scene sceneID="sly-Ko-9lf">
             <objects>
-                <viewController id="CNN-nj-WjQ" sceneMemberID="viewController">
+                <viewController id="CNN-nj-WjQ" customClass="CreateGroupViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="OTF-vd-X92"/>
                         <viewControllerLayoutGuide type="bottom" id="zsv-bV-rC9"/>
@@ -255,9 +255,30 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GfY-0c-oQ8">
-                                <rect key="frame" x="51" y="330" width="234" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Roomies Apartment 335" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GfY-0c-oQ8">
+                                <rect key="frame" x="51" y="276" width="272" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="DbX-cx-KzD"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQg-6G-OkU">
+                                <rect key="frame" x="120" y="356" width="134" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Urv-3V-gdC"/>
+                                </constraints>
+                                <state key="normal" title="Generate Passcode"/>
+                                <connections>
+                                    <action selector="generate:" destination="CNN-nj-WjQ" eventType="touchUpInside" id="A9R-1A-xet"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7cg-iK-RjQ">
+                                <rect key="frame" x="120" y="406" width="134" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="1qU-9q-nkb"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -265,17 +286,33 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="GfY-0c-oQ8" firstAttribute="top" secondItem="Kte-Ww-4Li" secondAttribute="bottom" constant="8" id="25X-Ub-wb1"/>
+                            <constraint firstItem="UQg-6G-OkU" firstAttribute="leading" secondItem="76i-3g-HLT" secondAttribute="leading" constant="120" id="4P5-6V-aHg"/>
+                            <constraint firstItem="UQg-6G-OkU" firstAttribute="top" secondItem="GfY-0c-oQ8" secondAttribute="bottom" constant="50" id="AsX-Ur-Vrh"/>
                             <constraint firstAttribute="trailing" secondItem="Kte-Ww-4Li" secondAttribute="trailing" constant="119" id="D62-RT-e80"/>
+                            <constraint firstAttribute="trailing" secondItem="GfY-0c-oQ8" secondAttribute="trailing" constant="52" id="L8W-HZ-bHq"/>
                             <constraint firstItem="Kte-Ww-4Li" firstAttribute="leading" secondItem="76i-3g-HLT" secondAttribute="leading" constant="119" id="O5M-ra-fjF"/>
+                            <constraint firstItem="7cg-iK-RjQ" firstAttribute="top" secondItem="UQg-6G-OkU" secondAttribute="bottom" constant="20" id="QJA-Nj-NL4"/>
+                            <constraint firstItem="GfY-0c-oQ8" firstAttribute="leading" secondItem="76i-3g-HLT" secondAttribute="leading" constant="51" id="a4V-zX-9Fm"/>
                             <constraint firstAttribute="trailing" secondItem="ch7-Eu-YIy" secondAttribute="trailing" constant="110" id="dcQ-e4-KIR"/>
                             <constraint firstItem="ch7-Eu-YIy" firstAttribute="leading" secondItem="76i-3g-HLT" secondAttribute="leading" constant="110" id="fAJ-T3-tOX"/>
                             <constraint firstItem="ch7-Eu-YIy" firstAttribute="top" secondItem="OTF-vd-X92" secondAttribute="bottom" constant="8" id="ivz-4P-goC"/>
                             <constraint firstItem="Kte-Ww-4Li" firstAttribute="top" secondItem="ch7-Eu-YIy" secondAttribute="bottom" constant="20" id="lFt-XO-i0E"/>
+                            <constraint firstItem="7cg-iK-RjQ" firstAttribute="leading" secondItem="76i-3g-HLT" secondAttribute="leading" constant="120" id="r7E-W7-Fe7"/>
+                            <constraint firstAttribute="trailing" secondItem="UQg-6G-OkU" secondAttribute="trailing" constant="121" id="tTn-nO-5HY"/>
+                            <constraint firstAttribute="trailing" secondItem="7cg-iK-RjQ" secondAttribute="trailing" constant="121" id="vPr-5e-DbL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Create a group" id="xOB-c6-GJs">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Mqu-kO-6OB"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Mqu-kO-6OB">
+                            <connections>
+                                <segue destination="SLm-TJ-fxV" kind="show" id="fVY-bD-5Bl"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="codeTextField" destination="7cg-iK-RjQ" id="sh9-hD-0QF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E5b-Yb-eaR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -483,4 +520,7 @@
         <image name="phone512" width="512" height="512"/>
         <image name="profileicon9" width="512" height="512"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="fVY-bD-5Bl"/>
+    </inferredMetricsTieBreakers>
 </document>
